<resources>
    <string name="app_name">Internship Manager</string>
    <string name="title_page_accueil">Internship Manager</string>
    <string name="title_activity_maps">Maps Activity</string>
    <string name="title_add_internship">Add internship</string>
    <string name="title_modify_internship">Modify an internship</string>
    <string name="modify_internship_text">Modify internship</string>
    <string name="default_name_string">STUDENT NAME</string>
    <string name="title_activity_page_maps">pageMaps</string>
    <string name="confirm_delete_title">Delete internship</string>
    <string name="confirm_delete_message">Do you want to delete this internship?</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <string name="high_priority_text">High</string>
    <string name="medium_priority_text">Medium</string>
    <string name="low_priority_text">Low</string>
    <string name="student_text">Student</string>
    <string name="student_name_text">Student name:</string>
    <string name="visit_priority_text">Visit priority:</string>
    <string name="school_year_text">School year:</string>
    <string name="year_text">Year</string>
    <string name="stage_enterprise_text">Internship enterprise</string>
    <string name="name_text">Name:</string>
    <string name="enterprise_name_text">Enterprise name</string>
    <string name="address_text">Address:</string>
    <string name="city_text">City:</string>
    <string name="postal_code_text">Postal code:</string>
    <string name="province_text">Province:</string>
    <string name="add_internship_text">ADD INTERNSHIP</string>
    <string name="profil_photo_text">Profile photo</string>
    <string name="internship_text">Internship</string>
    <string name="internshipDaysText">Internship days</string>
    <string name="wednesdayText">Wednesday</string>
    <string name="thursdayText">Thursday</string>
    <string name="fridayText">Friday</string>
    <string name="internshipScheduleText">Internship schedule</string>
    <string name="startTimeText">Start time:</string>
    <string name="endTimeText">End time:</string>
    <string name="lunchScheduleText">Dinner schedule</string>
    <string name="averageDurationVisitsText">Average visit duration</string>
    <string name="_30MinsText">30 minutes</string>
    <string name="_45MinsText">45 minutes</string>
    <string name="_1HourText">1 hour</string>
    <string name="InternshipTutorAvailabilityText">Internship tutor availability</string>
    <string name="wednesdayAmText">Wednesday AM</string>
    <string name="thursdayAmText">Thursday AM</string>
    <string name="fridayAmText">Friday AM</string>
    <string name="wednesdayPmText">Wednesday PM</string>
    <string name="thursdayPmText">Thursday PM</string>
    <string name="fridayPmText">Friday PM</string>
    <string name="commentsText">Comments</string>
    <string name="internshipCommentsText">"Comments about the internship "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="visitNotAddedTitle">Some visits have not been added</string>
    <string name="someVisitsAtSameDay">At least one visit
        in the same day already exists</string>
    <string name="internshipWithoutDays">One of the interships does not contain pre-set interships days</string>
    <string name="okText">Ok</string>
    <string name="visitFor">Visit for</string>
</resources>